force-app/main/default/objects/Expansion_Request__c/Expansion_Request__c.object-meta.xml
<CustomObject>
    <label>Expansion Request</label>
    <nameField>
        <displayFormat>ER - {0000}</displayFormat>
        <label>Expansion Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expansion Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>