force-app/main/default/objects/Expansion_Request__c/fields/Channel_VP__c.field-meta.xml
<CustomField>
    <fullName>Channel_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expansion_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>