force-app/main/default/objects/Expansion_Request__c/fields/Discussed_this_request_with_CAM__c.field-meta.xml
<CustomField>
    <fullName>Discussed_this_request_with_CAM__c</fullName>
    <inlineHelpText>Have you discussed this request with your Channel Account Manager?</inlineHelpText>
    <label>Discussed this request with CAM?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>