force-app/main/default/objects/Expansion_Request__c/fields/Industry_where_you_would_like_to_expand__c.field-meta.xml
<CustomField>
    <fullName>Industry_where_you_would_like_to_expand__c</fullName>
    <inlineHelpText>Please select the NCR Industry where you would like to expand</inlineHelpText>
    <label>Industry where you would like to expand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>