force-app/main/default/objects/Expansion_Request__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <defaultValue>&quot;By submitting, you understand your CAM, their Sales Leader and NCR Channel Programs will be notified of your expansion request for review and approval&quot;</defaultValue>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>