force-app/main/default/objects/Expansion_Request__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Expansion Requests (Primary Contact)</relationshipLabel>
    <relationshipName>Expansion_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>