force-app/main/default/objects/Expansion_Request__c/fields/Retail__c.field-meta.xml
<CustomField>
    <fullName>Retail__c</fullName>
    <label>Retail</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cross - POS Hardware</fullName>
            </value>
            <value>
                <fullName>Cross - Retail Kiosks</fullName>
            </value>
            <value>
                <fullName>Cross - Network Security Services (NSS)</fullName>
            </value>
            <value>
                <fullName>FDMM - ENCOR</fullName>
            </value>
            <value>
                <fullName>FDMM - Connected Payments</fullName>
            </value>
            <value>
                <fullName>FDMM - StorePro</fullName>
            </value>
            <value>
                <fullName>FDMM - Retail Manager</fullName>
            </value>
            <value>
                <fullName>FDMM - Self Checkout (SCO)</fullName>
            </value>
            <value>
                <fullName>FDMM - Self Checkout (SCO) AIIP</fullName>
            </value>
            <value>
                <fullName>PCR - RPOS</fullName>
            </value>
            <value>
                <fullName>PCR - OPTIC</fullName>
            </value>
            <value>
                <fullName>PCR - Food Service (CSS/KPS)</fullName>
            </value>
            <value>
                <fullName>PCR - Pulse for RPOS</fullName>
            </value>
            <value>
                <fullName>PCR - ConvenienceGo (Cgo)</fullName>
            </value>
            <value>
                <fullName>PCR - Self Checkout (SCO)</fullName>
            </value>
            <value>
                <fullName>Specialty Retail - Counterpoint</fullName>
            </value>
            <value>
                <fullName>Specialty Retail - Silver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>