force-app/main/default/objects/Expansion_Request__c/fields/Territories_currently_served__c.field-meta.xml
<CustomField>
    <fullName>Territories_currently_served__c</fullName>
    <label>Territories currently served</label>
    <length>255</length>
    <type>Text</type>
</CustomField>