force-app/main/default/objects/Expansion_Request__c/fields/Territory_1__c.field-meta.xml
<CustomField>
    <fullName>Territory_1__c</fullName>
    <label>Territory 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>