force-app/main/default/objects/Expansion_Request__c/fields/Territory_2__c.field-meta.xml
<CustomField>
    <fullName>Territory_2__c</fullName>
    <label>Territory 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>