force-app/main/default/objects/Expansion_Request__c/fields/Territory_3__c.field-meta.xml
<CustomField>
    <fullName>Territory_3__c</fullName>
    <label>Territory 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>