force-app/main/default/objects/Expansion_Request__c/recordTypes/Industry_Expansion.recordType-meta.xml
<RecordType>
    <fullName>Industry_Expansion</fullName>
    <active>true</active>
    <label>Industry Expansion</label>
</RecordType>