force-app/main/default/objects/Expansion_Request__c/recordTypes/Territory_Expansion.recordType-meta.xml
<RecordType>
    <fullName>Territory_Expansion</fullName>
    <active>true</active>
    <label>Territory Expansion</label>
</RecordType>